modules/base/alb2/target_groups.tf
resource "aws_lb_target_group" "this" {
  for_each             = var.target_groups
  name                 = each.key
  port                 = each.value.port
  protocol             = each.value.protocol
  target_type          = each.value.target_type
  vpc_id               = each.value.target_type == "lambda" ? null : var.vpc_id
  deregistration_delay = each.value.target_type == "lambda" ? null : each.value.deregistration_delay

  lambda_multi_value_headers_enabled = each.value.target_type == "lambda" ? false : null

  dynamic "health_check" {
    for_each = each.value.health_check != null ? [each.value.health_check] : []
    content {
      enabled             = health_check.value.enabled
      path                = health_check.value.path
      protocol            = health_check.value.protocol
      matcher             = health_check.value.matcher
      interval            = health_check.value.interval
      timeout             = health_check.value.timeout
      healthy_threshold   = health_check.value.healthy_threshold
      unhealthy_threshold = health_check.value.unhealthy_threshold
    }
  }

  dynamic "stickiness" {
    for_each = each.value.stickiness != null ? [each.value.stickiness] : []
    content {
      enabled         = stickiness.value.enabled
      type            = stickiness.value.type
      cookie_duration = stickiness.value.cookie_duration
    }
  }

  tags = merge(var.tags, try(each.value.tags, {}))
}
