modules/base/alb2/listeners.tf
resource "aws_lb_listener" "this" {
  for_each          = var.listeners
  load_balancer_arn = aws_lb.this.arn
  port              = each.value.port
  protocol          = each.value.protocol
  ssl_policy        = try(each.value.ssl_policy, null)
  certificate_arn   = try(each.value.certificate_arn, null)

  default_action {
    type             = each.value.default_action_type
    target_group_arn = aws_lb_target_group.this[each.value.target_group_name].arn
  }

  depends_on = [aws_lb.this]
}

resource "aws_lb_listener_rule" "this" {
  for_each = var.listener_rules

  listener_arn = aws_lb_listener.this[each.value.listener_name].arn
  priority     = each.value.priority

  action {
    type             = "forward"
    target_group_arn = aws_lb_target_group.this[each.value.target_group_name].arn
  }

  condition {
    path_pattern {
      values = each.value.path_patterns
    }
  }

  depends_on = [aws_lb_target_group_attachment.this]
}
